# mads-ml-koenvanesterik

./: .gitignore  .lefthook.yml  Gemfile  _config.yml  _tailwind.css  index.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-deploy.yml  build.yml  deploy.yml
_bibliography/: references.bib
_includes/: footer.html  header.html
_layouts/: default.html  home.html  page.html  post.html  skeleton.html
assignments/: index.md
assignments/_posts/: 2025-09-08-neural-networks-assignment-report.md  2025-09-08-neural-networks-report.md  2025-09-25-ethics-portfolio-assignment-1.md  2025-10-03-ethics-portfolio-assignment-2.md  2025-10-21-cnns-assignment-report.md  2026-01-07-deployment-assignment-report.md  2026-01-08-rnns-assignment-report.md  2026-01-14-hypertuning-assignment-report.md
assignments/_posts/2025-09-08-neural-networks/: instructions.md  journal.txt  notebook.ipynb
assignments/_posts/2025-09-08-neural-networks/modellogs/20251002-143519/: events.out.tfevents.1759415723.bcfdbf844ebc.9145.0
assignments/_posts/2025-09-08-neural-networks/modellogs/20251002-143637/: events.out.tfevents.1759415797.bcfdbf844ebc.9145.1
assignments/_posts/2025-09-08-neural-networks/modellogs/20251002-143653/: events.out.tfevents.1759415813.bcfdbf844ebc.9145.2  model.toml
assignments/_posts/2025-09-08-neural-networks/modellogs/20251002-143707/: events.out.tfevents.1759415827.bcfdbf844ebc.9145.3  model.toml
assignments/_posts/2025-09-08-neural-networks/modellogs/20251002-143719/: events.out.tfevents.1759415839.bcfdbf844ebc.9145.4  model.toml
assignments/_posts/2025-09-08-neural-networks/modellogs/20251002-143734/: events.out.tfevents.1759415854.bcfdbf844ebc.9145.5  model.toml
assignments/_posts/2025-09-08-neural-networks/modellogs/20251002-143745/: events.out.tfevents.1759415865.bcfdbf844ebc.9145.6  model.toml  settings.toml
notebooks/cnns/: notebook.ipynb
notebooks/hypertuning/: Makefile  notebook.ipynb  with_batchnorm.csv  with_batchnorm_lr_0_1.csv  without_batchnorm.csv
notebooks/neural-networks/: journal.txt  notebook.ipynb  results.csv
notebooks/rabbit-hole/: notebook.ipynb
notebooks/rnns/: notebook.ipynb
notebooks/splash-screen/: notebook.ipynb
reflections/: index.md
(+6 files in other folders)
