[project]
name = "mads-ml-koenvanesterik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.7"
dependencies = [
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "mads-datasets[torch]>=0.3.14",
    "mltrainer>=0.2.5",
    "ruff>=0.12.11",
    "tabulate>=0.9.0",
    "tomlserializer>=0.2.0",
    "torchinfo>=1.8.0",
]

[tool.ruff]
line-length = 80
include = ["pyproject.toml", "notebooks/**/*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
force-sort-within-sections = true

[dependency-groups]
dev = []
